--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -1,24 +1,129 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5hP-tv-BW5">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--To-Do List-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ixo-Od-BJC">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ixo-Od-BJC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="4Zp-yf-wbS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ixo-Od-BJC" secondAttribute="bottom" id="SeS-Cg-xqX"/>
+                            <constraint firstItem="ixo-Od-BJC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="XPr-a2-dao"/>
+                            <constraint firstItem="ixo-Od-BJC" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="nFe-cS-g8U"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="To-Do List" id="lWd-a5-YYa">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="ehE-OZ-DfW">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="b2e-bI-N7F" kind="show" id="ALn-ir-zFd"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="addButton" destination="ehE-OZ-DfW" id="n6l-UX-nGx"/>
+                        <outlet property="listTableView" destination="ixo-Od-BJC" id="gXV-Dv-9g5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1039" y="220"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="f4L-c8-Zko">
+            <objects>
+                <viewController id="b2e-bI-N7F" customClass="DetailViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hbK-Pu-CKq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wF5-BJ-NAR">
+                                <rect key="frame" x="20" y="84" width="335" height="200"/>
+                                <color key="backgroundColor" red="0.66799789669999998" green="0.47512125970000002" blue="0.25860109930000003" alpha="0.25" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="iNO-bN-YV3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FHF-8n-He5">
+                                <rect key="frame" x="20" y="304" width="335" height="34"/>
+                                <color key="backgroundColor" red="0.66799789669999998" green="0.47512125970000002" blue="0.25860109930000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="Save">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="FHF-8n-He5" firstAttribute="top" secondItem="wF5-BJ-NAR" secondAttribute="bottom" constant="20" id="4z4-lO-4FK"/>
+                            <constraint firstItem="wF5-BJ-NAR" firstAttribute="leading" secondItem="Nr9-lj-A7m" secondAttribute="leading" constant="20" id="IT7-8u-vOA"/>
+                            <constraint firstItem="FHF-8n-He5" firstAttribute="leading" secondItem="Nr9-lj-A7m" secondAttribute="leading" constant="20" id="Jyq-Uu-reP"/>
+                            <constraint firstItem="Nr9-lj-A7m" firstAttribute="trailing" secondItem="FHF-8n-He5" secondAttribute="trailing" constant="20" id="Si8-Gn-7HO"/>
+                            <constraint firstItem="wF5-BJ-NAR" firstAttribute="top" secondItem="Nr9-lj-A7m" secondAttribute="top" constant="20" id="hmj-x5-BV8"/>
+                            <constraint firstItem="Nr9-lj-A7m" firstAttribute="trailing" secondItem="wF5-BJ-NAR" secondAttribute="trailing" constant="20" id="pCk-d1-Ait"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Nr9-lj-A7m"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ceb-9E-tLw">
+                        <barButtonItem key="backBarButtonItem" title="Cancel" id="7LB-Lf-cce"/>
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="nI2-LD-CY5">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="cancelButtonClick:" destination="b2e-bI-N7F" id="eHf-2I-pqZ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="detailTextView" destination="wF5-BJ-NAR" id="A10-5A-a6B"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y7n-7P-lOj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1857" y="220"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="DYH-gF-XJf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5hP-tv-BW5" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="05Y-tF-bL3">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.66799789669999998" green="0.47512125970000002" blue="0.25860109930000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="AiY-eR-o1w"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JWG-MD-nme" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="166" y="220"/>
         </scene>
     </scenes>
 </document>
